--- a/bower.json
+++ b/bower.json
@@ -27,8 +27,6 @@
   ],
   "devDependencies": {
     "jquery": "~2.1.3",
-    "bootstrap": "~3.3.4",
-    "moment": "~2.10.2",
-    "malihu-custom-scrollbar-plugin": "~3.0.8"
+    "bootstrap": "~3.3.4"
   }
 }
