--- a/package.json
+++ b/package.json
@@ -2,19 +2,28 @@
   "name": "spent-webpack-js-firebase",
   "version": "0.0.1",
   "description": "The app to present spent using webpack to modularized.",
-  "main": "index.html",
-  "devDependencies": {
-	"grunt": "^0.4.5",
-    "grunt-contrib-copy": "^0.7.0"
+  "homepage": "https://github.com/rodrigo-morais/spent-webpack-js-firebase",
+  "main": "./dist/main.js",
+  "scripts": {
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/rodrigo-morais/spent-webpack-js-firebase.git"
   },
+  "keywords": [
+    "webpack",
+    "firebase",
+    "javascript"
+  ],
   "author": "Rodrigo Morais",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/rodrigo-morais/spent-webpack-js-firebase/issues"
   },
-  "homepage": "https://github.com/rodrigo-morais/spent-webpack-js-firebase"
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-babel": "^4.0.0"
+  }
 }
